[package]
name = "silence-cutter-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"

# Rustのpanic!をブラウザのコンソールに出力するためのデバッグ用ユーティリティ
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
# パフォーマンス（速度）を最優先に最適化
opt-level = 3
lto = true
